--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -122,6 +122,12 @@
     <Compile Include="serviceForms\venue.Designer.cs">
       <DependentUpon>venue.cs</DependentUpon>
     </Compile>
+    <Compile Include="signInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="signInfo.Designer.cs">
+      <DependentUpon>signInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="signup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +177,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="serviceForms\beauty.resx">
       <DependentUpon>beauty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="signInfo.resx">
+      <DependentUpon>signInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="signup.resx">
       <DependentUpon>signup.cs</DependentUpon>
